--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/main.css">
-    <script type="module" src="js/index.js" defer></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <main>
